[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aicuban-forming-workflow-tool"
version = "0.1.0"
description = "Decision-point workflow engine for sequencing medical coding procedures with CLI, API, and JSON-based workflow definitions."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
license = { text = "Apache-2.0" }
keywords = ["workflow", "medical-coding", "CLI", "FastAPI"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/aicuban-forming-workflow-tool"
"Documentation" = "https://github.com/yourusername/aicuban-forming-workflow-tool#readme"
"Issues" = "https://github.com/yourusername/aicuban-forming-workflow-tool/issues"

[project.dependencies]
click = ">=8.0"
fastapi = ">=0.100"
uvicorn = ">=0.23"
pydantic = ">=2.0"
networkx = ">=3.0"
jsonschema = ">=4.0"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.10"
]

[tool.setuptools.packages.find]
where = ["aicuban"]

[tool.setuptools.entry-points.console_scripts]
aicuban = "aicuban.cli:main"
