[metadata]
name = aicuban-forming-workflow-tool
version = 0.1.0
description = Decision-point workflow engine for sequencing medical coding procedures with CLI, API, and JSON-based workflow definitions.
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/aicuban-forming-workflow-tool
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Healthcare Industry
    Topic :: Scientific/Engineering :: Medical Science Apps.
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    click>=8.0
    fastapi>=0.100
    uvicorn>=0.23
    pydantic>=2.0
    networkx>=3.0
    jsonschema>=4.0
python_requires = >=3.9

[options.entry_points]
console_scripts =
    aicuban = aicuban.cli:main

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0
    black>=23.0
    isort>=5.10

[tool:pytest]
addopts = --cov=aicuban --cov-report=term-missing

[flake8]
max-line-length = 88
extend-ignore = E203
